# video-uzatma

./: .gitignore  ARCHITECTURE.md  README.md  build.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.bat  run.command  run.py  run.sh
.github/workflows/: release.yml
src/video_extender/: __main__.py  app.py  cli.py
src/video_extender/core/: compliance.py  config.py  errors.py  fast_path.py  ffmpeg.py  hardware.py  job.py  pipeline.py  preflight.py  probe.py  scheduler.py
src/video_extender/core/encoders/: __init__.py  amf.py  base.py  libaom_av1.py  libvpx_vp9.py  libx264.py  libx265.py  nvenc.py  qsv.py  vaapi.py  videotoolbox.py
src/video_extender/core/extenders/: __init__.py  base.py  black.py  freeze.py  image_card.py  intro_outro.py  loop.py
src/video_extender/core/filters/: __init__.py  aspect_convert.py  audio_fade_out.py  audio_normalize.py  base.py  color_grade.py  metadata_strip.py  subtitle_burn.py  watermark.py
src/video_extender/core/presets/: __init__.py  base.py  linkedin.py  meta.py  quality.py  tiktok.py  twitter.py  youtube.py
src/video_extender/gui/: main_window.py  workers.py
src/video_extender/utils/: duration.py  ffprobe_parser.py  logging.py  notify.py  paths.py  thumbnail.py
tests/: conftest.py  test_cli.py  test_compliance.py  test_config.py  test_duration.py  test_e2e.py  test_encoders.py  test_errors.py  test_extenders.py  test_fast_path.py  test_filters.py  test_gui.py  test_hardware.py  test_notify.py  test_paths.py  test_pipeline.py  test_presets.py  test_scheduler.py  test_stress.py
(+7 files in other folders)
